# ariake

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel
.github/workflows/: ci.yml
docs/: helidon-native-static-content.md
examples/health/: BUILD.bazel  application.properties  run.sh
examples/health/src/main/java/org/ariake/examples/health/: BUILD.bazel  HealthApplication.java  HealthFragment.java  HealthResponder.java  HealthResponderImpl.java  HealthService.java  Main.java  package-info.java
examples/health/src/test/java/org/ariake/examples/health/: BUILD.bazel  HealthIntegrationTest.java
examples/hello/: BUILD.bazel
examples/hello/src/main/java/org/ariake/examples/hello/: BUILD.bazel  EchoWebSocketService.java  HealthResponder.java  HealthResponderImpl.java  HealthService.java  HelloApplication.java  HelloFragment.java  Main.java  package-info.java
examples/jpa/: BUILD.bazel  application.properties  run.sh
examples/jpa/src/main/java/org/ariake/examples/jpa/: BUILD.bazel  JpaApplication.java  JpaFragment.java  Main.java  PageView.java  PageViewService.java  package-info.java
examples/jpa/src/test/java/org/ariake/examples/jpa/: BUILD.bazel  JpaIntegrationTest.java
examples/static/: BUILD.bazel  application.properties  run.sh
examples/static/content/: BUILD.bazel  app.cache.js  index.nocache.html  notes.txt  styles.cache.css
examples/static/src/main/java/org/ariake/examples/staticcontent/: BUILD.bazel  CacheControlFilter.java  Main.java  PageView.java  PageViewService.java  PathOverrideHttpExchange.java  PreEncodedBrotliFilter.java  StaticContentApplication.java  StaticContentFragment.java  StaticContentRoot.java  StaticContentRoutes.java  StaticContentService.java  package-info.java
examples/static/src/test/java/org/ariake/examples/staticcontent/: BUILD.bazel  StaticContentIntegrationTest.java
examples/websocket/: BUILD.bazel  run.sh
examples/websocket/src/main/java/org/ariake/examples/websocket/: BUILD.bazel  EchoWebSocketService.java  Main.java  WebSocketApplication.java  WebSocketFragment.java  WebSocketPageService.java
examples/websocket/src/test/java/org/ariake/examples/websocket/: BUILD.bazel  WebSocketIntegrationTest.java  package-info.java
plans/ariake-framework/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml  60-research-report.md
plans/split-static-jpa-examples/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml
plans/static-content-example/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml
src/main/java/org/ariake/: BUILD.bazel
src/main/java/org/ariake/config/: AriakeConfig.java  BUILD.bazel  package-info.java
src/main/java/org/ariake/http/: AriakeHttpService.java  BUILD.bazel  HttpEndpoint.java  HttpExchange.java  HttpFilter.java  HttpFilterChain.java  HttpFilterRegistration.java  HttpHandler.java  HttpMethod.java  HttpRoutes.java
src/main/java/org/ariake/jpa/: BUILD.bazel  EntityManagerProvider.java  package-info.java
src/main/java/org/ariake/jpa/eclipselink/: BUILD.bazel  EclipseLinkEntityManagerProvider.java  package-info.java
src/main/java/org/ariake/metrics/: BUILD.bazel  Counter.java  Metrics.java  MetricsHttpService.java  package-info.java
src/main/java/org/ariake/metrics/prometheus/: BUILD.bazel  PrometheusMetrics.java  package-info.java
src/main/java/org/ariake/server/: AriakeServer.java  BUILD.bazel  HttpRoutingService.java  WebSocketRoutingService.java  package-info.java
src/main/java/org/ariake/server/helidon/: BUILD.bazel  HelidonAriakeServer.java  HelidonRoutingService.java  HelidonWebSocketListener.java  package-info.java
src/main/java/org/ariake/tx/narayana/: BUILD.bazel  NarayanaTransactions.java  package-info.java
src/main/java/org/ariake/websocket/: AriakeWebSocketService.java  BUILD.bazel  WebSocketEndpoint.java  WebSocketListener.java  WebSocketRoutes.java  WebSocketSession.java  package-info.java
src/test/java/org/ariake/: BUILD.bazel
src/test/java/org/ariake/architecture/: ArchitectureTest.java  BUILD.bazel  package-info.java
src/test/java/org/ariake/config/: AriakeConfigTest.java  BUILD.bazel
src/test/java/org/ariake/examples/: BUILD.bazel  ExamplesIntegrationTest.java  package-info.java
src/test/java/org/ariake/http/: BUILD.bazel  HttpRoutesTest.java  package-info.java
src/test/java/org/ariake/metrics/prometheus/: BUILD.bazel  PrometheusMetricsTest.java
src/test/java/org/ariake/tx/narayana/: BUILD.bazel  NarayanaTransactionsTest.java
tools/: check.sh  java_format.sh  native-image.sh  update_java_deps.sh
tools/java-format/: BUILD.bazel  dependencies.yml
