load("//third_party/java:rules.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "server",
    main_class = "org.ariake.examples.health.Main",
    runtime_deps = [
        "//examples/health/src/main/java/org/ariake/examples/health:health_lib",
    ],
)

exports_files(["application.properties"])
