load("//third_party/java:rules.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "server",
    main_class = "org.ariake.examples.hello.Main",
    runtime_deps = [
        "//examples/hello/src/main/java/org/ariake/examples/hello:hello_lib",
    ],
)

exports_files(["application.properties"])
