load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "config",
    srcs = glob(["config/*.java"]),
)

java_library(
    name = "http",
    srcs = glob(["http/*.java"]),
)

java_library(
    name = "websocket",
    srcs = glob(["websocket/*.java"]),
)

java_library(
    name = "metrics_api",
    srcs = glob(["metrics/*.java"]),
    deps = [
        ":http",
    ],
)

java_library(
    name = "prometheus_metrics",
    srcs = glob(["metrics/prometheus/*.java"]),
    deps = [
        ":metrics_api",
        "//third_party/java:prometheus_metrics_core",
        "//third_party/java:prometheus_metrics_exposition_textformats_api",
        "//third_party/java:prometheus_metrics_model_api",
    ],
)

java_library(
    name = "server",
    srcs = glob(["server/*.java"]),
)

java_library(
    name = "helidon_server",
    srcs = glob(["server/helidon/*.java"]),
    deps = [
        ":config",
        ":http",
        ":server",
        ":websocket",
        "//third_party/java:helidon_http_api",
        "//third_party/java:helidon_service_metadata",
        "//third_party/java:helidon_webserver",
        "//third_party/java:helidon_webserver_http2",
        "//third_party/java:helidon_webserver_websocket",
        "//third_party/java:helidon_websocket_api",
    ],
)

java_library(
    name = "narayana_tx",
    srcs = glob(["tx/narayana/*.java"]),
    deps = [
        "//third_party/java:jakarta_transaction_api",
        "//third_party/java:jboss_logging_api",
        "//third_party/java:narayana_jta",
    ],
)

java_library(
    name = "jpa",
    srcs = glob(["jpa/*.java"]),
    deps = [
        "//third_party/java:jakarta_persistence_api",
    ],
)

java_library(
    name = "eclipselink_jpa",
    srcs = glob(["jpa/eclipselink/*.java"]),
    deps = [
        ":jpa",
        "//third_party/java:jakarta_persistence_api",
        "//third_party/java:org_eclipse_persistence_jpa",
    ],
)

java_library(
    name = "ariake",
    exports = [
        ":config",
        ":eclipselink_jpa",
        ":helidon_server",
        ":http",
        ":jpa",
        ":metrics_api",
        ":narayana_tx",
        ":prometheus_metrics",
        ":server",
        ":websocket",
    ],
)
