load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "ariake",
    exports = [
        "//src/main/java/org/ariake/config",
        "//src/main/java/org/ariake/jpa",
        "//src/main/java/org/ariake/jpa/eclipselink:eclipselink_jpa",
        "//src/main/java/org/ariake/metrics:metrics_api",
        "//src/main/java/org/ariake/metrics/prometheus:prometheus_metrics",
        "//src/main/java/org/ariake/server",
        "//src/main/java/org/ariake/tx/narayana:narayana_tx",
    ],
)
