load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "jpa",
    srcs = [
        "EntityManagerProvider.java",
        "package-info.java",
    ],
    deps = [
        "//third_party/java:jakarta_persistence_api",
    ],
)
