load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "metrics_api",
    srcs = [
        "Counter.java",
        "Metrics.java",
        "MetricsHttpService.java",
        "package-info.java",
    ],
    deps = [
        "//src/main/java/org/ariake/server",
        "//third_party/java:helidon_webserver",
    ],
)
