load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "server",
    srcs = [
        "AriakeServer.java",
        "HttpRoutingService.java",
        "WebSocketRoutingService.java",
        "package-info.java",
    ],
    deps = [
        "//src/main/java/org/ariake/config",
        "//third_party/java:helidon_http",
        "//third_party/java:helidon_service_metadata",
        "//third_party/java:helidon_webserver",
        "//third_party/java:helidon_webserver_http2",
        "//third_party/java:helidon_webserver_websocket",
        "//third_party/java:helidon_websocket",
    ],
)
