load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "websocket",
    srcs = [
        "AriakeWebSocketService.java",
        "WebSocketEndpoint.java",
        "WebSocketListener.java",
        "WebSocketRoutes.java",
        "WebSocketSession.java",
        "package-info.java",
    ],
)
