load("//third_party/java:rules.bzl", "java_test")

package(default_visibility = ["//visibility:public"])

java_test(
    name = "http_test",
    srcs = [
        "HttpRoutesTest.java",
        "package-info.java",
    ],
    test_class = "org.ariake.http.HttpRoutesTest",
    deps = [
        "//src/main/java/org/ariake/http",
        "//third_party/java:junit",
    ],
)
