load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "eclipselink_jpa",
    srcs = [
        "EclipseLinkEntityManagerProvider.java",
        "package-info.java",
    ],
    deps = [
        "//src/main/java/org/ariake/jpa",
        "//third_party/java:jakarta_persistence_api",
        "//third_party/java:org_eclipse_persistence_jpa",
    ],
)
