load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "helidon_server",
    srcs = [
        "HelidonAriakeServer.java",
        "HelidonWebSocketListener.java",
        "package-info.java",
    ],
    deps = [
        "//src/main/java/org/ariake/config",
        "//src/main/java/org/ariake/http",
        "//src/main/java/org/ariake/server",
        "//src/main/java/org/ariake/websocket",
        "//third_party/java:helidon_http_api",
        "//third_party/java:helidon_service_metadata",
        "//third_party/java:helidon_webserver",
        "//third_party/java:helidon_webserver_http2",
        "//third_party/java:helidon_webserver_websocket",
        "//third_party/java:helidon_websocket_api",
    ],
)
