load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "health_lib",
    srcs = [
        "HealthApplication.java",
        "HealthFragment.java",
        "HealthResponder.java",
        "HealthResponderImpl.java",
        "HealthService.java",
        "Main.java",
        "package-info.java",
    ],
    deps = [
        "//src/main/java/org/ariake/config",
        "//src/main/java/org/ariake/metrics:metrics_api",
        "//src/main/java/org/ariake/metrics/prometheus:prometheus_metrics",
        "//src/main/java/org/ariake/server",
        "//third_party/java:helidon_webserver",
        "//third_party/java:javax_annotation",
        "//third_party/java:sting_core",
        "//third_party/java:sting_processor",
    ],
)
