load("//third_party/java:rules.bzl", "java_test")

package(default_visibility = ["//visibility:public"])

java_test(
    name = "health_integration_test",
    srcs = [
        "HealthIntegrationTest.java",
        "package-info.java",
    ],
    data = [
        "//examples/health:server_deploy.jar",
    ],
    test_class = "org.ariake.examples.health.HealthIntegrationTest",
    deps = [
        "//third_party/java:junit",
    ],
)
