load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "jpa_lib",
    srcs = [
        "JpaApplication.java",
        "JpaFragment.java",
        "Main.java",
        "PageView.java",
        "PageViewService.java",
        "package-info.java",
    ],
    plugins = [
        "//third_party/java:sting_processor_plugin",
    ],
    deps = [
        "//examples/jpa/src/main/resources/META-INF:persistence_resources",
        "//src/main/java/org/ariake",
        "//third_party/java:h2",
        "//third_party/java:helidon_webserver",
        "//third_party/java:jakarta_persistence_api",
        "//third_party/java:javax_annotation_api",
        "//third_party/java:sting_core",
        "//third_party/java:sting_server",
    ],
)
