load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "static_lib",
    srcs = [
        "Main.java",
        "StaticContentApplication.java",
        "StaticContentFragment.java",
        "StaticContentRoot.java",
        "StaticContentRoutes.java",
        "package-info.java",
    ],
    plugins = [
        "//third_party/java:sting_processor_plugin",
    ],
    deps = [
        "//src/main/java/org/ariake",
        "//third_party/java:helidon_http_api",
        "//third_party/java:helidon_webserver",
        "//third_party/java:helidon_webserver_static_content",
        "//third_party/java:javax_annotation_api",
        "//third_party/java:sting_core",
        "//third_party/java:sting_server",
    ],
)
